# OpenGLProject

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  TODO.txt  compile_commands.json
.cache/clangd/index/: application.cpp.76410E0D364714A8.idx  application.h.2E5440773A999B57.idx  array_vector.h.DF4D5B32912B1C02.idx  assert.h.D6C42DE199F1AA79.idx  buffer.h.E5CB5991DED0A8C8.idx  context.c.C2F5CA05E469F350.idx  context.h.C04791A2685CD634.idx  core.h.D96A8688106DBA77.idx  debug.h.20FD22327AA40EDF.idx  defer.h.E5339859E2044A80.idx  egl_context.c.6D4CA94B17D23638.idx  egl_context.h.45DD5F04AEDF0EA7.idx  fileio.cpp.B7AA7A1BC4D29E4C.idx  fileio.h.CA5CC3823F4A4A8D.idx  glfw3.h.A7967821105730F6.idx  glx_context.c.DA4D5289D3BBC1BE.idx  glx_context.h.E210022723ABF52C.idx  greedy_vector.h.D1EBED00B8F8D134.idx  image.h.65012E044B8ECED0.idx  init.c.6A29F4E023A2E50D.idx  input.c.2F7208830D107363.idx  input.cpp.BC9FA0AEE8812D79.idx  instance_renderer.cpp.C94B74583264865C.idx  instance_renderer.h.B8F8D1F440FB35B8.idx  internal.h.F3BA633B10CBBB81.idx  linux_joystick.c.54E59BC7B1F76B0E.idx  linux_joystick.h.7018B0A0A0F870DC.idx  log.h.902138C657608A00.idx  main.cpp.6C1C4DECFE70E2A9.idx  mappings.h.2CF1D38865DE21A3.idx  matrix.h.6E3EB7B582D6DFB4.idx  memview.h.D1D9BCEF05B64F1C.idx  monitor.c.C03018CDE0AB8ACA.idx  osmesa_context.c.F6D083AF41B2999E.idx  osmesa_context.h.3C391B9A8F9D74F5.idx  posix_thread.c.E3306E30916354B2.idx  posix_thread.h.1B9F84FFB09F546D.idx  posix_time.c.03CF458DFD022AC8.idx  posix_time.h.4050D03D2CC97721.idx  shader.cpp.A5485D2C7D452423.idx  (+23 more)
.clangd/index/: adl_pointer.hpp.6AA949E977D39CBE.idx  algorithm.hpp.ED4CE0C9FBB8C201.idx  android-ndk-r17.hpp.5AD144C8AFC933CC.idx  any.hpp.1330F5EB55654664.idx  application.cpp.76410E0D364714A8.idx  application.cpp.CF1082509CFE545B.idx  application.h.2E5440773A999B57.idx  application.h.C2F4315ED1076A46.idx  array_vector.h.4F77E64895D4B686.idx  array_vector.h.DF4D5B32912B1C02.idx  assert.h.459E0D51875A5418.idx  assert.h.D6C42DE199F1AA79.idx  attribute.h.589F5FA934CD2945.idx  buffer.cpp.718A7E0B2070FF36.idx  buffer.h.8AE2C116FFE3CF94.idx  buffer.h.E5CB5991DED0A8C8.idx  cache.hpp.AD7FAF6128F516FE.idx  component.hpp.D72FAB4A832C84FF.idx  config.h.E3B6DA161B6C3C11.idx  container.hpp.7F68F315747F2849.idx  context.c.8C2BF553046D7CA6.idx  context.c.C2F5CA05E469F350.idx  context.h.6DEE9456EB8801AF.idx  context.h.C04791A2685CD634.idx  core.h.D7D02C0A049A695D.idx  core.h.D96A8688106DBA77.idx  cpuid.cpp.62378DB67F4A5E26.idx  cpuid.cpp.BF185DC2AE8030AF.idx  cpuid.h.2C7E827F44F74653.idx  cpuid.h.64DE82DFCED58193.idx  ctx.hpp.3BED2F4C8EA24990.idx  debug.h.20FD22327AA40EDF.idx  debug.h.91568FB4B0746FD4.idx  defer.h.C117E2F08023809C.idx  defer.h.E5339859E2044A80.idx  delegate.hpp.7630D0038DDB6E0E.idx  dispatcher.hpp.704087F85CBE8323.idx  egl_context.c.6D4CA94B17D23638.idx  egl_context.c.82C052727AA94614.idx  egl_context.h.45DD5F04AEDF0EA7.idx  (+156 more)
OpenGLProject/: CMakeLists.txt  application.cpp  application.h  assert.h  core.h  debug.h  defer.h  layer.h  log.h  main.cpp  module.h  oglpch.h  profiling.h  window.cpp  window.h
OpenGLProject/assets/: asset.h  asset_manager.h
OpenGLProject/core_modules/: render_module.cpp  render_module.h  threading_module.h  update_module.h
OpenGLProject/events/: event.h  event_dispatcher.h  events.h
OpenGLProject/graphics/: buffer.h  context.h  gl_data_types.h  shader.cpp  shader.h  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.h
OpenGLProject/graphics/2D/: instance_renderer.cpp  instance_renderer.h  renderer2d.cpp  renderer2d.h  sprite_data.h  sprite_storage.h  tex_coords.h
OpenGLProject/math/: funcs.h  matrix.h  transform.h  vector.h
OpenGLProject/scene/: entity.h
OpenGLProject/util/: array_vector.h  cpuid.cpp  cpuid.h  debug.h  errors.h  fileio.cpp  fileio.h  greedy_vector.h  image.h  linked_list.h  log.h  memview.h  stack_allocator.h  stb_custom_macros.h  stb_image.cpp  stb_image.h  stb_image_write.h  storage.h  string_hash.h  text_colours.h  time.h  type_traits.h  util.h  uuid.cpp  uuid.h  worker_pool.h
Testing/: a.out  allocators.h  main.cpp
